# arm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clone.sh  deps.sh  package.xml  readme.md  repos.yaml  setup.sh
.github/workflows/: ci-ubuntu.yaml  compile.yaml
arm/common/include/common/: ConfigManager.h  KinematicsHandler.h  Logger.hpp  TopicBuffer.hpp  Utils.hpp
arm/common/src/: ConfigManager.cpp  KinematicsHandler.cpp
arm/configuration/: CMakeLists.txt  config.yaml
arm/configuration/manipulators/ur5/: manip.yaml  manipulator.urdf
arm/configuration/robots/elm4/: robot.urdf  robot.yaml
arm/controller/: CMakeLists.txt  package.xml
arm/controller/include/: CommandHandler.h  ConfigManager.h  DynamixelManipComms.h  JointVelocityWaypoint.h  Logger.h  Manipulator.h  ManipulatorFactory.h  PlannerFactory.h  StateMachine.h  Utils.h  WaypointExecutor.h
arm/controller/src/: CommandHandler.cpp  ConfigManager.cpp  DynamixelManipComms.cpp  GazeboManipComms.cpp  JointPositionWaypoint.cpp  JointVelocityWaypoint.cpp  KinematicsHandler.cpp  Manipulator.cpp  ManipulatorFactory.cpp  PlannerFactory.cpp  PointCloudHandler.cpp  StateMachine.cpp  TaskPositionWaypoint.cpp  TaskVelocityWaypoint.cpp  WaypointExecutor.cpp  main.cpp
arm/engine/: CMakeLists.txt  package.xml
arm/engine/include/: Context.hpp  Engine.h  ExecutePathNode.h  IArmTaskPlanner.hpp  INode.hpp  MoveVehicleNode.h  MovingNode.h  PcaGraspPlanner.h  PlanGraspNode.h  PlanPickTaskNode.h  PlannerFactory.h  PointCloudHandler.h  SendWaypointNode.h  SequenceNode.h  SimpleGripperVisualizer.h  SimpleMobileTaskPlanner.h  TrajectoryPlanner.h
arm/engine/src/: Engine.cpp  ExecutePathNode.cpp  MoveVehicleNode.cpp  MovingNode.cpp  PcaGraspPlanner.cpp  PlanGraspNode.cpp  PlanPickTaskNode.cpp  PlannerFactory.cpp  SendWaypointNode.cpp  SequenceNode.cpp  SimpleGripperVisualizer.cpp  SimpleMobileTaskPlanner.cpp  TrajectoryPlanner.cpp  main.cpp
configuration/: config.yaml
configuration/testManip/: manipulator.urdf
include/: CommandHandler.h  ConfigManager.h  DynamixelManipComms.h  GazeboManipComms.h  IArmTaskPlanner.hpp  IGraspPlanner.hpp  IManipComms.h  IWaypoint.hpp  IrmEntry.hpp  JointPositionWaypoint.h  KinematicsHandler.h  Logger.h  Manipulator.h  ManipulatorFactory.h  MobileArmTaskPlanner.h  PcaGraspPlanner.h  PlannerFactory.h  PointCloudHandler.h  StateMachine.h  TaskPositionWaypoint.h  TaskVelocityWaypoint.h  TrajectoryPlanner.h  Utils.h  WaypointExecutor.h
src/: CommandHandler.cpp  ConfigManager.cpp  DynamixelManipComms.cpp  GazeboManipComms.cpp  JointPositionWaypoint.cpp  KinematicsHandler.cpp  Manipulator.cpp  ManipulatorFactory.cpp  MobileArmTaskPlanner.cpp  PcaGraspPlanner.cpp  PlannerFactory.cpp  StateMachine.cpp  TaskPositionWaypoint.cpp  TaskVelocityWaypoint.cpp  TrajectoryPlanner.cpp  WaypointExecutor.cpp  main.cpp
test/: CMakeLists.txt  DynamixelManipComms_Test.cpp  RunAll.cpp  first.cpp
tools/: CMakeLists.txt  irm_generator.cpp
tools/include/: IrmGenerator.h
tools/src/: IrmGenerator.cpp  irm_generator.cpp
